# project_fastapi

./: .coverage  .env  Dockerfile  compose.yaml  database.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: app.yml
fast_zero/: app.py  datagen.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 1f9da7bcc7bb_create_users_table.py  880eff51690c_create_todo_table.py  95040aa029e7_create_users_table.py  f84ee63c9531_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
